# qtProg

tcp/: CMakeLists.txt
tcp/client/: CMakeLists.txt  main.cpp  mytcpsocket.cpp  mytcpsocket.h
tcp/server/: CMakeLists.txt  main.cpp  myserver.cpp  myserver.h  mythread.cpp  mythread.h
